--- a/src/input.css
+++ b/src/input.css
@@ -16,3 +16,13 @@ body {
   font-family: "calculator-bold", sans-serif;
   background-color: hsl(185, 41%, 84%);
 }
+
+.selected-btn {
+  color: hsl(183, 100%, 15%);
+  background-color: hsl(172, 67%, 45%);
+}
+
+.btn {
+  color: white;
+  background-color: hsl(183, 100%, 15%);
+}
